--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
 					<p class="smallTitle">I</p>
 					<p class="title">Stimulus</p>
 					<p class="description_ko">
-						미디어가 발전하면 발전할수록, 사람들은 물리적인 장벽을 뚫고 서로와 교감할 수 있게 되었지만, 그 실체는 피상적으로 교류할 수밖에 없는, 극심한 분단된 자아를 보여주게 된다. 미디어의 발전에 따라 껍질을 두르고 자유롭게 교감하는 것처럼 보이지만, 진짜 자아를 숨겨버린 사람들의 내면을 미디어셀이라는 이름의 가공의 생명체로 형상화하였다.
+						미디어셀의 껍질은 자극에 민감하다. 컨텐츠라는 이름의 자극이 주어지면 미디어셀은 그것을 받아들여서 형상을 일시적으로 변화시킨다. 자극을 받아들인 미디어셀은 스스로의 핵을 자극과 같은 색으로 물들인다.
+						<br/>
+						*왼쪽의 미디어셀을 터치해서 자극을 줘 보세요.
 					</p>
 					<p class="description_en">
-						As media develops, people are able to communicate with each other through physical barriers, but the reality shows an extremely divided self that has no choice but to interact superficially. With the development of the media, it seems to be surrounded and freely communicated, but the inner sides of people who hid their real selves are embodied as processed creatures named MediaCell.
+						The shell of a MediaCell is sensitive to stimulation. Given a stimulus named content, MediaCell accepts it and temporarily changes the shape. After accepting it, the MediaCell dyes its own nucleus with the same color as stimulation.
+						<br/>
+						*Touch the MediaCell on the left to stimulate it.
 					</p>
 					<div style="text-align: right;">
 						<div class="nextButton" style="margin:30px 20px 0px 0px"></div>
@@ -59,10 +63,14 @@
 					<p class="smallTitle">II</p>
 					<p class="title">Relationships</p>
 					<p class="description_ko">
-						미디어가 발전하면 발전할수록, 사람들은 물리적인 장벽을 뚫고 서로와 교감할 수 있게 되었지만, 그 실체는 피상적으로 교류할 수밖에 없는, 극심한 분단된 자아를 보여주게 된다. 미디어의 발전에 따라 껍질을 두르고 자유롭게 교감하는 것처럼 보이지만, 진짜 자아를 숨겨버린 사람들의 내면을 미디어셀이라는 이름의 가공의 생명체로 형상화하였다.
+						미디어셀은 다른 미디어셀과도 접촉할 수 있다. 미디어셀들이 만나면 서로의 껍질을 합체시켜, 교감하는 듯한 행동을 보인다. 하지만, 그 실체인 핵은 서로와 점점 멀어지려 한다. 겉으로는 이어져 있지만, 자아는 객체화되고 분리화되는 것의 표상이다.
+						<br/>
+						*오른쪽의 미디어셀 주변을 터치해서 다른 미디어셀을 보내보세요.
 					</p>
 					<p class="description_en">
-						As media develops, people are able to communicate with each other through physical barriers, but the reality shows an extremely divided self that has no choice but to interact superficially. With the development of the media, it seems to be surrounded and freely communicated, but the inner sides of people who hid their real selves are embodied as processed creatures named MediaCell.
+						MediaCells may also contact each other. When they meet, they combine each other's shells and act as if they are interacting. However, the nucleus, which is the entity, is gradually becoming distant from each other. Although  it seems connected, but the ego is objectified and separated.
+						<br/>
+						*Touch around the MediaCell on the right and shoot another MediaCell.
 					</p>
 					<div style="text-align: right;">
 						<div class="nextButton" style="margin:30px 20px 0px 0px"></div>
@@ -79,10 +87,10 @@
 				<p class="smallTitle">III</p>
 				<p class="title">World</p>
 				<p class="description_ko">
-					교수님 살려주세요
+					미디어셀들은 세상을 자유롭게 떠다니며, 다른 미디어셀과 만난다. 하지만, 그들의 핵이 만날 일은 결코 없다...
 				</p>
 				<p class="description_en">
-					Help me Professor!
+					MediaCells float freely around the world and meet each other. However, their nuclei will never meet...
 				</p>
 			</div>
 		</div>
