--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.0/math.min.js"></script>
+	<script type="text/javascript" src="js/libs/tone.js"></script>
 	<link rel="shortcut icon" href="#">
 </head>
 <body>
@@ -95,6 +96,12 @@
 			</div>
 		</div>
 	</main>
+	<header>
+		<div id="muteButton">
+			<div id="muteIcon"></div>
+			<p id="muteTxt">Mute</p>
+		</div>
+	</header>
 	<nav>
 		<div>
 			<div id="navBarIcons">
