--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="https://hammerjs.github.io/dist/hammer.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.0/math.min.js"></script>
-	<script type="text/javascript" src="js/libs/tone.js"></script>
+	<script type="text/javascript" src="js/libs/Tone.js"></script>
 	<link rel="shortcut icon" href="#">
 </head>
 <body>
